# DTwin

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
back/: .coveragerc  .dockerignore  Dockerfile  Dockerfile.dev  README.md  entrypoint.dev.sh  entrypoint.sh  gunicorn_config.py  index.py  pyproject.toml  schema.sql  shared_sales_data.npy
back/back/: index.py
back/main/: index.py  models.py  schema.sql
back/main/chatgpt/: chat.py  customer_personas.py  helper_nodes.py  lineral_execution.py  llm_utils.py  main.py  nodes.py  prompts.py  state.py  summary.py  supervisor_testing.py  test_agents.py  test_agentsv2.py  test_agentsv3.py
back/main/http_requests/: req_weather.py
back/main/models/: counter.py  history.py  inventory.py  log.py  models.py  products.py  sale.py  user.py
back/main/routes/: __init__.py  auth.py  sales.py  test.py  weather.py
back/main/services/: db_functions.py  mutations.py
back/main/simulation/: chat.py  helper_nodes.py  llm_utils.py  nodes.py  seller.py  seller_testing.py  simulation.py  state.py  supervisor.py  supervisor_testing.py
back/main/utils/: item_name.py
back/migrations/versions/: 12bd4ebffdac_changed_timestamp_to_date_in_sales_table.py  32d9d289c11b_added_raw_stream_to_chat.py  3539729fadb2_delete_log_table_add_chats_relationship_.py  72f55e3ccaed_change_sale_item_id_to_product_id_fk.py  745dce9d7254_changed_date_to_non_nullable.py  7471de4727cf_create_users.py  814062617edb_changed_amount_to_daily_customer_amount_.py  99ae3f10947d_drop_item_id_column.py  c7209406c37c_initial_schema.py  cea99e2e99c6_add_customers_table.py  d19cb545f7c3_.py  d3f3a6be0760_add_not_nullable_to_customer_amount.py  f8c3cecc1feb_change_product_id_to_fk.py
back/src/: config.py  config.toml  index.py
back/src/data/: mcp_data.py  mock_month_sales_data.csv
back/src/data_scripts/: customer_data_generator.py  data_analysis_test_data.py  data_generator.py  sales_data_generator.py  storage_data_generator.py
back/src/database/: auth_db.py  product_db.py  sales.py  supervisor_db.py
back/src/graph/: state.py  supervisor.py  supervisor_prompt.py
back/src/http_requests/: req_weather.py
back/src/models/: models.py
back/src/prompts/: supervisor_prompt.py
back/src/routes/: __init__.py  auth.py  chat_route.py  dashboard_route.py  sales.py  supervisor.py  supervisor_route.py  test.py  user_route.py  weather.py
back/src/services/: counterfactual_agent.py  dataframe_creation.py  math_agent.py  mcp_client.py  research_agent.py  sales_agent.py  sql_agent.py  sql_agent_v2.py  storage_agent.py  storage_agent_v2.py
back/src/simulation/: chat.py  llm_utils.py  nodes.py  state.py
back/src/utils/: check_pending_tool_call.py  csv_to_pd.py  dashboard.py  format.py  generate_thread_id.py  item_name.py  logger.py  mock_weather.py  np_to_pd.py  pretty_print.py  (+1 more)
back/tests/: conftest.py  test_config.py  test_counterfactual_agent.py  test_dataframe.py  test_db_functions.py  test_format.py  test_generate_thread_id.py  test_lin_reg_graph.py  test_lin_req_tool.py  test_mcp.py  test_pending_tool_calls.py  test_rate_limiter.py  test_sales_agent.py  test_sales_api.py  test_sales_db.py  test_sim_agent.py  test_sql_agent.py  test_sql_agent_v2.py  test_storage_agent.py  test_supervisor.py  test_supervisor_db.py
(+81 files in other folders)
