[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["tiaineno <olli.vj.tiainen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.9.9"
flask = "^3.1.2"
flask-cors = "^6.0.1"
requests = "^2.32.5"
loguru = "^0.7.3"
sqlalchemy = "^2.0.43"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.10"
langgraph = "^0.6.6"
langchain = {extras = ["openai"], version = "^0.3.27"}
langchain-openai = "^0.3.32"
grandalf = "^0.8"
pytest = "^8.4.2"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
langgraph-supervisor = "^0.0.29"
langchain-tavily = "^0.2.11"

[tool.poetry.scripts]
back = "src.index:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"